# digital-muon-pipeline

./: .containerignore  .gitignore  Cargo.toml  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  component.yml  trace-viewer.yml
common/src/tracer/: mod.rs  otel_tracer.rs  propagator.rs  tracer_engine.rs
diagnostics/: Cargo.toml
diagnostics/src/: main.rs
diagnostics/src/daq_trace/: app.rs  mod.rs
digitiser-aggregator/: Cargo.toml
digitiser-aggregator/src/: main.rs
events-analyser/: Cargo.toml  README.md  analysis.json
events-analyser/output/: High Noise  High Noise.html  Low Noise  Low Noise.html  No Noise  No Noise.html
events-analyser/src/: evaluator_task.rs  event.rs  main.rs
events-analyser/src/analysis/: chart.rs  graphs.rs  mod.rs  with_true.rs
events-analyser/src/analysis/metrics/: event_counts.rs  false_counts.rs  group_by.rs  intensity_graph.rs  mod.rs  muon_lifetime.rs  output.rs  partial_results.rs  result.rs  utils.rs
events-analyser/src/analysis/metrics/results/: complete.rs  mod.rs  partial.rs
events-analyser/src/engine/: algorithm.rs  bucket.rs  chart.rs  criteria.rs  metric.rs  mod.rs  settings.rs  utils.rs  values.rs
events-analyser/src/engine/elements/: algorithm.rs  bucket.rs  chart.rs  criteria.rs  metric.rs  mod.rs  waveform.rs
events-analyser/src/eventlists/: cache.rs  complete.rs  mod.rs  partial.rs
events-analyser/src/frame/: cache.rs  evaluated.rs  mod.rs  partial.rs
nexus-writer/: Cargo.toml
nexus-writer/src/: main.rs  message_handlers.rs
simulator/: Cargo.toml
simulator/src/: main.rs
simulator/src/runs/: alarm.rs  (+3 more)
streaming-types/: build.rs
streaming-types/src/: lib.rs
trace-reader/: Cargo.toml
trace-reader/src/: loader.rs  main.rs
trace-reader/src/hdf5trace/: cached_dataset.rs  channel.rs  digitiser.rs  mod.rs
trace-reader/src/picoscope/: mod.rs
trace-to-events/: Cargo.toml  README.md
trace-to-events/src/: channels.rs  main.rs  parameters.rs  processing.rs  test_data.rs
trace-viewer/src/: lib.rs  main.rs
trace-viewer/style/: container-layout.scss  containers.scss  controls-layout.scss  controls.scss
trace-writer/: Cargo.toml  README.md
trace-writer/src/: digitiser_data.rs  error.rs  file_writer.rs  main.rs  trace_data.rs
trace-writer/test_assets/: test.dat2  test.hdf5
(+92 files in other folders)
