[package]
name = "events-analyser"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
digital-muon-common.workspace = true
digital-muon-streaming-types.workspace = true
git-version.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
miette = { workspace = true, features = ["fancy"] }
num.workspace = true
plotly = { workspace = true }
rdkafka.workspace = true
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
indexing_slicing = "deny"
panic = "deny"
unwrap_used = "deny"
