[package]
name = "trace-reader"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
git-version.workspace = true
hdf5.workspace = true
miette = { workspace = true, features = ["fancy"] }
ndarray.workspace = true
rand.workspace = true
rayon.workspace = true
rdkafka.workspace = true
digital-muon-common.workspace = true
digital-muon-streaming-types.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints.clippy]
fallible_impl_from = "deny"
# indexing_slicing = "deny"  TODO
panic = "deny"
unwrap_used = "deny"
